clusters/hive/apps/homeassistant/k8s-manifests/addon-tasmoadmin-netpol-allow-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: addon-tasmoadmin-allow-from-traefik
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      k8s-app: addon-tasmoadmin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
